Fix Typo Fix...

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="text-center text-md-left">
       <h2>Welcome to the 2019</h2>
       <h1>World Affairs Conference</h1>
-      <h3 class="display-5">Febuary 4th</h3>
+      <h3 class="display-5">Febuary 4th-5th</h3>
     </div>
     <div class="text-center">
       This Year's Theme:
