--- a/schedule/index.html
+++ b/schedule/index.html
@@ -77,7 +77,7 @@
   <div class="card card-body">
     <h1 class="text-center">WAC 2019 Schedule</h1>
     <!--<p class="text-center">(<a href="../files/schedule_2018.pdf">PDF copy</a>)</p>-->
-    <h2 class="text-center mt-2">Keynote Address</h2>
+    <h2 class="text-center mt-2">Febuary 4th, Keynote Address</h2>
     <div class="table-responsive">
       <table class="table table-hover my-4">
     	  <thead class="thead-dark">
@@ -106,7 +106,7 @@
     	  </tbody>
     	</table>
     </div>
-    <h2 class="text-center">Conference Day</h2>
+    <h2 class="text-center">Febuary 5th, Conference Day</h2>
     <div class="table-responsive">
       <table class="table table-hover my-4">
     	  <thead class="thead-dark">
