--- a/faq/index.html
+++ b/faq/index.html
@@ -112,7 +112,7 @@
           </a>
           <div id="collapse-wheniswac" class="collapse" role="tabpanel" aria-labelledby="heading-wheniswac">
             <div class="card-body">
-              <p>WAC spans two days: the Keynote Address, featuring a prominent member of the community, is held on the night of February 5th and open to the public; and the Conference Day, which is held on February 6th and is attended by delegates and faculty supervisors only.</p>
+              <p>WAC spans two days: the Keynote Address, featuring a prominent member of the community, is held on the night of February 4th and open to the public; and the Conference Day, which is held on February 5th and is attended by delegates and faculty supervisors only.</p>
 
             </div>
           </div>
@@ -134,7 +134,7 @@
           </div>
         </div>
         
-        <div class="card">
+        <!--<div class="card">
           <a data-toggle="collapse" data-parent="#accordion-general" href="#collapse-whodowecontactformediainforation" aria-expanded="true" aria-controls="collapse-whodowecontactformediainforation">
             <div class="card-header" role="tab" id="heading-whodowecontactformediainforation">
               <h5 class="mb-0">
@@ -148,7 +148,7 @@
 
             </div>
           </div>
-        </div>
+        </div>-->
         
       </div>
     </div>
@@ -183,7 +183,7 @@
           </a>
           <div id="collapse-whenisregistrationdue" class="collapse" role="tabpanel" aria-labelledby="heading-whenisregistrationdue">
             <div class="card-body">
-              <p>Registration is due on January the 26th. If you have any concerns, please contact us.</p>
+              <p>Registration is due on January the 28th. If you have any concerns, please contact us.</p>
 
             </div>
           </div>
@@ -199,7 +199,7 @@
           </a>
           <div id="collapse-howmuchdoesregcost" class="collapse" role="tabpanel" aria-labelledby="heading-howmuchdoesregcost">
             <div class="card-body">
-              <p>Registration costs $50 per student, but there is an early-bird price of $45 per student if registration is completed before January 9th, 2018. If price is an issue, please let us know: we can arrange special accomodations.</p>
+              <p>Registration costs $50 per student, but there is an early-bird price of $45 per student if registration is completed before January 15th, 2018. If price is an issue, please let us know: we can arrange special accomodations.</p>
 
             </div>
           </div>
@@ -231,7 +231,7 @@
           </a>
           <div id="collapse-whenisdue" class="collapse" role="tabpanel" aria-labelledby="heading-whenisdue">
             <div class="card-body">
-              <p>The WAC team recommends that advisors send their registration fees in by January 26th, to ensure that it arrives on a timely matter; the hard deadline for registration fees is the day of the conference (February 6th), and we will not let delegates inside the conference if fees are not paid by then.</p>
+              <p>The WAC team recommends that advisors send their registration fees in by January 28th, to ensure that it arrives on a timely matter; the hard deadline for registration fees is the day of the conference (February 5th), and we will not let delegates inside the conference if fees are not paid by then.</p>
 
             </div>
           </div>
@@ -302,7 +302,7 @@
           </a>
           <div id="collapse-whendoesthekeynoteaddressstart" class="collapse" role="tabpanel" aria-labelledby="heading-whendoesthekeynoteaddressstart">
             <div class="card-body">
-              <p>The Keynote Address starts at 7:00 PM, but we recommend delegates come at 6:30 PM to register and get seats.</p>
+              <p>The Keynote Address starts at 6:00 PM, but we recommend delegates come at 5:30 PM to register and get seats.</p>
 
             </div>
           </div>
