--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
   <link rel="stylesheet" href= "css/bootstrap.min.css">
   <link rel="stylesheet" href= "css/style.css">
-  <script src="js/google_analytics.js"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132383226-1"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-132383226-1');
+  </script>
   <script defer src="js/fontawesome-all.min.js"></script>
   <style>
 		body{
