--- a/plenaries/rights.html
+++ b/plenaries/rights.html
@@ -94,8 +94,19 @@
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">Shawna Bader Blau</h2>
-						Dr. Jennifer Sumner is currently a professor and lecturer in the department for Higher Education and Leadership at the Ontario Institute for Studies in Education at the University of Toronto. She received a bachelor's degree at the University of Toronto and went on to earn a diploma in agriculture and a PHD in rural studies both from the University of Guelph. Since then she has researched or taught in an astounding eight separate subjects at University of Toronto. She is an expert in the fields Sustainability, Food and sustainable food systems, Organic agriculture, Globalization, Rural communities/rural women and the civil commons and the social economy all of which pertain to important issues facing society and to this year’s theme of “Paradigm shifts”. Since 2005 she has written and co-edited four novels discussing environmental and agricultural sustainability policy, in addition she has received seven research grants for her work in sustainable food systems and how organic agriculture affects the rural economy.
+						Shawna Bader Blau has been in the field of advocacy and activism for working men and women seeking safe jobs within a fair work environment for several years. In addition, she has also worked in the field of international development and human rights for 17 years, and as a result, has lived or had a job in over 25 countries worldwide. Presently, Shawna leads the Solidarity Centre, or the largest global rights organization based in the United States. Since October 2011, she has served as the chief executive director of this organization, leading 220 staff in Washington D.C., 26 field offices, and implementing programs in 60 different countries globally.
 					</div>
+                    
+				</div>
+                <div class="row">
+					<div class="col-md-4">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/dzweig.png" alt="Florian Kerschbaum">
+					</div>
+					<div class="col-md-8">
+						<h2 class="text-center text-md-left">Dr. David Zweig</h2>
+						David Zweig is a Professor of Organizational Behaviour and Human Resources Management and Chair of the Department of Management at the University of Toronto’s Scarborough Campus. Professor Zweig teaches courses in Organizational Behaviour and HR Recruitment and Selection and his research is in the areas of employee deviance, specifically examining knowledge hiding and knowledge theft in organizations, employee cynicism, and the impact of employee surveillance. His research has been published in top management journals such as the Journal of Applied Psychology, the Journal of Organizational Behavior and Personnel Psychology and has received widespread national and international media attention. He won a ‘best paper’ award for his work on knowledge hiding in organizations and recently delivered a TEDx talk on workplace deviance and how to break this cycle of deviance in organizations.
+					</div>
+				</div>
 				</div>
 			</div>
 			<div class="card card-body text-center mt-2">
