--- a/addresses/index.html
+++ b/addresses/index.html
@@ -73,26 +73,33 @@
       </div>
     </div>-->
 
-      <div class="container">
+    <div class="container">
 	<div class="card card-body mb-5">
 		<h1 class="text-center">Opening Address: The Future Of Migrants In The Western World</h1>
-		<img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/ahussen.jpg" alt="Ahmed Hussen"/>
-        <h2 class="text-center">Ahmed Hussen</h2>
+		<img class="img-fluid d-block mx-auto my-2 img-quater" src="../img/plen/openf.png" alt="opening"/>
         <p>
 			The early 21st century has seen migration on an unprecedented scale since the second world war. Now, as many migrants begin to find themselves at their destinations, Western Nations find themselves with hundreds thousands of new inhabitants in their lands that they are responsible for. What does the future hold for these newly settled migrants? How will politics be affected by their presence? Should society absorb these new migrants, or should these migrants focus on preserving their own culture?
+            
 		</p>
+        <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/ahussen.jpg" alt="Ahmed Hussen"/>
+        <h2 class="text-center">Ahmed Hussen</h2>
 		<p>
 			Ahmed Hussen is the Minister of Immigration, Refugees and Citizenship for the Government of Canada, as well as a Member of Parliament for the riding of York South-Weston. Born and raised in Somalia, Hussen immigrated to Canada in 1993 where he settled in Regent Park and quickly gravitated towards public service. Before his entry into politics, Hussen practised Immigration, Criminal, Refugee, and Human Rights Law in Toronto. He was presented with the RBC Top 25 Canadian Immigrant Award, an award that honours the achievements of immigrants who have chosen to make Canada their home. The Toronto Star named him among the 10 individuals who have made significant contributions to Toronto in various fields, including community service, business, sports and science. He has continued his work in public service through his role as Minister of Immigration by creating new policies to help welcome more immigrants and refugees to Canada.
 		</p>
 		<div class="pb-5">
 		</div>
+    </div>
+</div>
+    <div class="container">
+	<div class="card card-body mb-5">
 		<h1 class="text-center">Closing Address: Needles in a Russian Haystack </h1>
-		<img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/dtesic.jpg" alt="Diana Tesic"/>
-        <h2 class="text-center">Diana Tesic</h2>
+        <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/plen/closef.png" alt="closing"/>
 		<p>
 			 The 2020 Tokyo Summer Olympic Games will be heavily scrutinised with regards to its doping control measures following the Russian doping scandals at the 2016 Rio Olympic Games. Many now wonder about the legitimacy of WADA and federal doping agencies around the world. Full of fascinating intricacies, dive into the world of doping control and fair play, as well as the McLaren Report, with Diana Tesic.
 
 		</p>
+        <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/dtesic.jpg" alt="Diana Tesic"/>
+        <h2 class="text-center">Diana Tesic</h2>
         <p>
         Diana Tesic is a well-practiced Sports Lawyer with experience working in sports arbitration, commercial law within the sports industry and sports investigations. Ms. Tesic received her Law degree from the University of Western Ontario in 2011, specializing in sports law. Ms. Tesic worked alongside Richard McLaren to investigate allegations of doping at the Sochi 2014 Winter Olympics for the World Anti-Doping Association and was an integral part of the publication of the McLaren Report—an investigation into the allegations of state-sponsored doping in Russia.
         </p>
