--- a/plenaries/defiance.html
+++ b/plenaries/defiance.html
@@ -75,7 +75,7 @@
 				<div class="card">
 					<div class="card-body">
 						<h1>Popular Defiance</h1>
-						<img class="img-fluid plenary-img" src="../img/wac_logo.svg" alt="Nuclear Weapons: Obsolete or the Future picture"/>
+						<img class="img-fluid plenary-img" src="../img/plen/defiancef.png" alt="Nuclear Weapons: Obsolete or the Future picture"/>
 						<p class="card-text">
 							<p>With the emergence of the internet and social media as a method to spread political messages, we have seen, along with the polarization of viewpoints, the emergence of political movements on both the left and right that draw mass followings. This has escalated to the point where political thinkers and activists are elevated to near celebrity status. Furthermore, as of January 2018, according to the Pew Research Center, 42% of Canadians accessed news from social media at least once a day, a number that is rapidly growing. As use of social media becomes ever more ubiquitous in the coming decade, it will surely have a large impact on how we think, act, and vote.</p>
 
