--- a/plenaries/eu.html
+++ b/plenaries/eu.html
@@ -74,7 +74,7 @@
 				<div class="card">
 					<div class="card-body">
 						<h1>The EU's Midlife Crisis</h1>
-						<img class="img-fluid plenary-img" src="../img/wac_logo.svg" alt="The EU's Midlife Crisis picture"/>
+						<img class="img-fluid plenary-img" src="../img/plen/euf.png" alt="The EU's Midlife Crisis picture"/>
 						<p class="card-text">
 							<p>The EU is fighting off a midlife crisis. With key issues such as Brexit and debt affecting member countries, the EU is facing a serious reckoning. Currently, they are at a crossroads that will dictate not only the future of millions, but also the direction of our new decade. How did the EU get here, and where will they go? </p>
 
