--- a/plenaries/index.html
+++ b/plenaries/index.html
@@ -78,7 +78,7 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-4">
-            <img class="img-fluid" src="../img/wac_logo.svg" alt="{plenary.title} picture"/>
+            <img class="img-fluid" src="../img/plen/euf.png" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
             <a href="../plenaries/eu.html"><h4 class="card-title">The EU’s Midlife Crisis</h4></a>
@@ -107,7 +107,7 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-4">
-            <img class="img-fluid" src="../img/wac_logo.svg" alt="{plenary.title} picture"/>
+            <img class="img-fluid" src="../img/plen/dataf.png" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
             <a href="../plenaries/data.html"><h4 class="card-title">Data Daycare</h4></a>
@@ -121,7 +121,7 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-4">
-            <img class="img-fluid" src="../img/wac_logo.svg" alt="{plenary.title} picture"/>
+            <img class="img-fluid" src="../img/plen/workerf.png" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
             <a href="../plenaries/rights.html"><h4 class="card-title">The Plight of Workers’ Rights</h4></a>
@@ -135,7 +135,7 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-4">
-            <img class="img-fluid" src="../img/wac_logo.svg" alt="{plenary.title} picture"/>
+            <img class="img-fluid" src="../img/plen/reconf.png" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
             <a href="../plenaries/reconcil.html"><h4 class="card-title">Reconciliation and Indigenization</h4></a>
@@ -149,7 +149,7 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-4">
-            <img class="img-fluid" src="../img/wac_logo.svg" alt="{plenary.title} picture"/>
+            <img class="img-fluid" src="../img/plen/defiancef.png" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
             <a href="../plenaries/defiance.html"><h4 class="card-title">Popular Defiance</h4></a>
