--- a/plenaries/reconcil.html
+++ b/plenaries/reconcil.html
@@ -75,7 +75,7 @@
 				<div class="card">
 					<div class="card-body">
 						<h1>Reconciliation and Indigenization</h1>
-						<img class="img-fluid plenary-img" src="../img/wac_logo.svg" alt="Data Daycare"/>
+						<img class="img-fluid plenary-img" src="../img/plen/reconf.png" alt="Data Daycare"/>
 						<p class="card-text">
 							<p>The plenary of Reconciliation and Indigenization is meant to discuss about conflict left with Indigenous peoples over from the past of Canada’s colonial history. It should be recognized and accepted the reality of Canadian history, accepted how that history paralyzed Indigenous Peoples, and how it continues to subjugate Indigenous Peoples. Furthermore, the plenary will show a mass discussion on reconciliation and the future of it within the upcoming decade.
             </p>
