--- a/plenaries/rights.html
+++ b/plenaries/rights.html
@@ -75,7 +75,7 @@
 				<div class="card">
 					<div class="card-body">
 						<h1>The Plight of Workers’ Rights</h1>
-						<img class="img-fluid plenary-img" src="../img/wac_logo.svg" alt="The Global Food Crisis picture"/>
+						<img class="img-fluid plenary-img" src="../img/plen/workerf.png" alt="The Global Food Crisis picture"/>
 						<p class="card-text">
 							<p>The Plight of Workers’ Rights is a plenary that generally focuses on democracy and its core values within the workplace. Essentially, this involves the powers and rights of workers when faced against large corporate employers. The name, itself, symbolizes and is representative of the ebb in workers’ rights with regards to these large corporations today. It also explicates the fact that many workers are victim to current prevalent issues within the work environment, and how some companies refuse to acknowledge or change policies as a result of this. Finally, the plenary relates toward the future based on the theme, 2020 Vision, and looks to provide an analysis of what democracy in the workplace will presumably look like over the next decade due to the inevitable development of technologies worldwide.
                         </p>
