--- a/plenaries/data.html
+++ b/plenaries/data.html
@@ -75,7 +75,7 @@
 				<div class="card">
 					<div class="card-body">
 						<h1>Data Datcare</h1>
-						<img class="img-fluid plenary-img" src="../img/wac_logo.svg" alt="Data Daycare"/>
+						<img class="img-fluid plenary-img" src="../img/plen/dataf.png" alt="Data Daycare"/>
 						<p class="card-text">
 							<p>We are currently living in the “age of data”, where everything that surrounds us is linked to a data source and everything in our lives is captured digitally. The physical world around us has turned into raw information: internet, video, call data records, customer transactions, healthcare records, etc. 
 
