final plen logo

--- a/plenaries/cleanup.html
+++ b/plenaries/cleanup.html
@@ -75,7 +75,7 @@
 				<div class="card">
 					<div class="card-body">
 						<h1>Startup Cleanup</h1>
-						<img class="img-fluid plenary-img" src="../img/wac_logo.svg" alt="Startup Cleanup"/>
+						<img class="img-fluid plenary-img" src="../img/plen/startupf.png" alt="Startup Cleanup"/>
 						<p class="card-text">
 							<p>Profit or Planet, the two most 'unrelated' economic topics a few decade ago, are now emergent as interrelated. While our economy remains relatively stable as the number of people living on the planet has experienced exponential growth in the past century, our planet is not ready to take the toll. Consequences of environment loss are dire, including scarcity of resources, loss of indigenous culture, lack of biodiversity, and the list goes on. Social entrepreneurship might be the solution to this problem, which is start-up companies that addresses social, cultural, or environmental issues. However, is that really enough? Can businesses abandon their profit motives to strive for a healthier planet with our current competitive economic system? How do people fit into the controversial connection between profit and the planet? Be prepared to be caught in the crossfire between the debated relationship of entrepreneurship and environment at People, Planet, Profit.</p>
 
