--- a/plenaries/index.html
+++ b/plenaries/index.html
@@ -92,7 +92,7 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-4">
-            <img class="img-fluid" src="../img/wac_logo.svg" alt="{plenary.title} picture"/>
+            <img class="img-fluid" src="../img/plen/startupf.png" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
             <a href="../plenaries/cleanup.html"><h4 class="card-title">Startup Cleanup</h4></a>
