Added links to all occurences of "WAC team"

--- a/plenaries/index.html
+++ b/plenaries/index.html
@@ -166,7 +166,7 @@
     <footer class="footer text-center mt-3">
   <div class="container">
     <p>
-      The World Affairs Conference website, made by the WAC team with <span class="fa fa-heart" style="color:red;"></span> and <a href="https://github.com/worldaffairsconference/world.ac" style="color:inherit;"><span class="fab fa-github"></span></a>
+      The World Affairs Conference website, made by the <a href="https://github.com/worldaffairsconference" target="_blank">WAC team</a> with <span class="fa fa-heart" style="color:red;"></span> and <a href="https://github.com/worldaffairsconference/world.ac" style="color:inherit;"><span class="fab fa-github"></span></a>
     </p>
     <p>
       Have any questions or concerns? Check out <a class="white-icon" href="../faq/index.html" style="text-decoration:underline;">our FAQ</a> or <a class="white-icon" href="../contact/index.html" style="text-decoration:underline;">get in touch with us!</a>
