--- a/plenaries/cleanup.html
+++ b/plenaries/cleanup.html
@@ -102,7 +102,13 @@
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">Yossi Sheffi</h2>
-						Valentin Schmidis the business editor of the Epoch Times, an independent global news source headquartered in New York. His areas of expertise include global macroeconomic trends, financial markets, China, and Bitcoin. Before joining the paper in 2012, he worked as a portfolio manager for BNP Paribas, a retail banking company, in Amsterdam, London, Paris, and Hong Kong.
+						Dr. Yossi Sheffi is a professor at the Massachusetts Institute of Technology, where he serves as Director of the MIT Center for Transportation and Logistics. He teaches and specializes in systems optimization, risk analysis, and supply chain management. He has published several scientific publications and five books, one of them Balancing Green: When to Embrace Sustainability in a Business (and When Not To).
+
+                        He founded the MITx MicroMasters in Supply Chain Management and served as the Director of the MIT Engineering Systems Division from 2007-2011.
+
+                        Outside the university, Professor Sheffi is an innovative entrepreneur who founded/co-founded five companies, such as, LogiCorp Inc., e-Chemicals Inc., Syncra Inc. etc.
+
+                        Dr. Sheffi is widely recognized academically. He became an honorary Doctor (Doctor Honoris Causa) of the University of Zaragoza in 2010. He obtained his B.Sc. from the Technion in Israel in 1975, his S.M. from MIT in 1977, and Ph.D. from MIT in 1978. 
 					</div>
 				</div>
 			</div>
