--- a/book/index.html
+++ b/book/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>Keynote | The World Affairs Conference</title>
+  <title>Reading List WAC | The World Affairs Conference</title>
   <meta name="description" content="The website for the World Affairs Conference, Canada's oldest student-led current affairs conference that explores world issues relevant to youth.">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
@@ -36,7 +36,7 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="nav navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="../keynote/index.html">Keynote</a>
       </li>
       <li class="nav-item">
@@ -57,7 +57,7 @@
       <li class="nav-item">
         <a class="nav-link" href="../contact/index.html">Contact</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="../book/index.html">Reading List</a>
       </li>
     </ul>
@@ -76,68 +76,66 @@
       </div>
     </div>-->
 
-      <div class="container">
-  <div class="card">
-    <div class="card-body">
-      <h1 class="text-center">Dr. James Hansen</h1>
-      <h2 class="text-center">Lionel Gelber Keynote Speaker</h2>
-      <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/Jhansenspeak.jpg" alt="Dr. James Hansen"/>
-      <p>
-        Dr. James Hansen, formerly Director of the NASA Goddard Institute for Space Studies, is Adjunct Professor at Columbia University’s Earth Institute, where he directs a program in Climate Science, Awareness and Solutions. Dr. Hansen is best known for his testimony on climate change in the 1980s that helped raise awareness of global warming. He is a member of the U.S. National Academy of Sciences and has received numerous awards including the Sophie and Blue Planet Prizes. Dr. Hansen is recognized for speaking truth to power and for outlining actions needed to protect the future of young people and all species on the planet.
-      </p>
-    </div>
-  </div>
-  <div class="card-deck mt-2">
-    <div class="card">
-      <img class="card-img-top img-fluid" src="../img/speakers/hinton.jpg" alt="Geoffrey Hinton">
-      <div class="card-body">
-        <h3 class="card-title">WAC 2018: Professor Geoffrey Hinton</h3>
-        <p class="card-text">
-          Geoffrey Hinton was one of the researchers who introduced the backpropagation algorithm and the first to use backpropagation for learning word embeddings. His other contributions to neural network research include Boltzmann machines, distributed representations, time-delay neural nets, mixtures of experts, variational learning and deep learning. His research group in Toronto made major breakthroughs in deep learning that revolutionized speech recognition and object classification.
-        </p>
+  <div class="container">
+      <div class="card card-body">
+          <h1 class="text-center">WAC Reading List</h1>
+          <hr>
+        <div class="row">
+          <div class="col-sm-4">
+            <img class="img-fluid" src="../img/book/soup.jpg" alt="{plenary.title} picture"/>
+          </div>
+          <div class="col-sm-8">
+            <h4 class="card-title">Spitting in the Soup: Inside the Dirty Game of Doping in Sports (2016) - Mark Johnson
+</h4>
+            <p class="card-text">- Covers similar topics as the closing address: “Needles in a Russian Haystack” - Russian doping in the Olympics.</p>
+            <p class="card-text">- It discusses how although the athletes are villainized for doping, teams, governments, and sponsors have also played a role.</p>
+            <p class="card-text">- Although we do have a recent book in the library regarding doping (“Doping in sports: winning at any cost?”), this book is more related to the closing address as it discusses outside influences on the athlete’s decision to dope.</p>
+          </div>
+        </div>
+          <br>
+        <div class="row">
+          <div class="col-sm-4">
+            <img class="img-fluid" src="../img/book/pred.jpg" alt="{plenary.title} picture"/>
+          </div>
+          <div class="col-sm-8">
+            <h4 class="card-title">Prediction Machines: The Simple Economics of Artificial Intelligence (2018) -  Ajay Agrawal, Joshua Gans, and Avi Goldfarb
+</h4>
+            <p class="card-text">- Discusses similar topics as the plenary “Data Daycare”.</p>
+            <p class="card-text">- This discusses how the recent “big data” movement will lead to a major increase in the use of artificial intelligence (effectively replacing many blue and white-collar jobs) and the risks that come along with it.</p>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-sm-4">
+            <img class="img-fluid" src="../img/book/ai.jpg" alt="{plenary.title} picture"/>
+          </div>
+          <div class="col-sm-8">
+            <h4 class="card-title">AI Superpowers: China, Silicon Valley, and the New World Order (2018) - Kai-Fu Lee</h4>
+            <p class="card-text">- Discusses similar topics as the plenary “Data Daycare”.</p>
+            <p class="card-text">- This Book adds add recent viewpoints on AI’s impact on daily life and future jobs to our library - as many students are interested in working in the tech field.</p>
+          </div>
+        </div>
+          <br>
+        <div class="row">
+          <div class="col-sm-4">
+            <img class="img-fluid" src="../img/book/eu.jpg" alt="{plenary.title} picture"/>
+          </div>
+          <div class="col-sm-8">
+            <h4 class="card-title">The New Totalitarian Temptation: Global Governance and the Crisis of Democracy in Europe (2016) - Todd Huizinga</h4>
+            <p class="card-text">- Written by plenary speaker on “EU’s midlife crisis”.</p>
+            <p class="card-text">- Discusses recent events such as Europe’s migrant crisis, the events leading up to Brexit, and Greece’s economic issues.</p>
+            <p class="card-text">- The Macintosh Library has a few books on the EU, but they were
+  published over 10 years ago.</p>
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top img-fluid" src="../img/snowden.png" alt="Picture of Edward Snowden">
-      <div class="card-body">
-        <h3 class="card-title">WAC 2015: Edward Snowden</h3>
-        <p class="card-text">
-          Two years ago, Edward Snowden gave the WAC 2015 Lionel Gelber Keynote Address. In June 2013, Snowden leaked highly classified information about the scale and scope of NSA and CIA counter-terrorism and counter-intelligence operations around the globe. Since then, he has become a household name and is among the most influential privacy activists in the world. At the Keynote Address, Snowden explained his views on global privacy issues, government involvement in citizens' lives, and the dangers of the digital age.
-        </p>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img-top img-fluid" src="../img/avatar.png" alt="Decorative Image">
-      <div class="card-body">
-        <h3 class="card-title">Previous WAC Speakers</h3>
-        <p class="card-text">
-    			WAC has featured many current, popular, and influential speakers in the past. Here's a quick summary of some big names at WAC:
-    			</br>
-          <b>Nanor Balyozian</b> - Syrian political advocate
-          </br>
-    			<b>Dr. Samantha Nutt</b> - Founder of War Child North America
-    			</br>
-    			<b>Stephen Lewis</b> - former United Nations ambassador
-    			</br>
-    			<b>Ralph Nader</b> - American political activist
-    			</br>
-    			<b>Lord David Owen</b> - former British Foreign Secretary
-    			</br>
-    			<b>Marc Garneau</b> - astronaut turned politician
-    			</br>
-    			<b>John Stackhouse</b> - editor of the Globe and Mail
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
 
 
 
     <footer class="footer text-center mt-3">
   <div class="container">
     <p>
-      The World Affairs Conference website, made by the <a class="white-icon" style="text-decoration:underline;" href="https://github.com/worldaffairsconference" target="_blank">WAC team</a> with <span class="fa fa-heart" style="color:red;"></span> and <a href="https://github.com/worldaffairsconference/world.ac" style="color:inherit;"><span class="fab fa-github"></span></a>
+      The World Affairs Conference website, made by the <a href="https://github.com/worldaffairsconference" target="_blank">WAC team</a> with <span class="fa fa-heart" style="color:red;"></span> and <a href="https://github.com/worldaffairsconference/world.ac" style="color:inherit;"><span class="fab fa-github"></span></a>
     </p>
     <p>
       Have any questions or concerns? Check out <a class="white-icon" href="../faq/index.html" style="text-decoration:underline;">our FAQ</a> or <a class="white-icon" href="../contact/index.html" style="text-decoration:underline;">get in touch with us!</a>
