--- a/contact/index.html
+++ b/contact/index.html
@@ -57,6 +57,9 @@
       <li class="nav-item active">
         <a class="nav-link" href="../contact/index.html">Contact</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="../book/index.html">Reading List</a>
+      </li>
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item">
