--- a/plenaries/data.html
+++ b/plenaries/data.html
@@ -60,6 +60,9 @@
       <li class="nav-item">
         <a class="nav-link" href="../contact/index.html">Contact</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="../book/index.html">Reading List</a>
+      </li>
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item">
