--- a/plenaries/rights.html
+++ b/plenaries/rights.html
@@ -97,7 +97,7 @@
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">Shawna Bader Blau</h2>
-						Shawna Bader Blau has been in the field of advocacy and activism for working men and women seeking safe jobs within a fair work environment for several years. In addition, she has also worked in the field of international development and human rights for 17 years, and as a result, has lived or had a job in over 25 countries worldwide. Presently, Shawna leads the Solidarity Centre, or the largest global rights organization based in the United States. Since October 2011, she has served as the chief executive director of this organization, leading 220 staff in Washington D.C., 26 field offices, and implementing programs in 60 different countries globally.
+						Shawna Bader Blau has been in the field of advocacy and activism for working men and women seeking safe jobs within a fair work environment for several years. In addition, she has also worked in the field of international development and human rights for 17 years, and as a result, has lived or had a job in over 25 countries worldwide. Presently, Shawna leads the Solidarity Centre, the largest global rights organization based in the United States. Since October 2011, she has served as the chief executive director of this organization, leading 220 staff in Washington D.C., 26 field offices, and implementing programs in 60 different countries globally.
 					</div>
                     
 				</div>
